refactor: add connection param